--- a/trunk/tasma/network-manager/po/tr.po
+++ b/trunk/tasma/network-manager/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: net-kga 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-11-10 15:27+0200\n"
+"POT-Creation-Date: 2006-11-23 00:11+0200\n"
 "PO-Revision-Date: 2005-12-19 20:02+0200\n"
 "Last-Translator: Gürer Özen <gurer@uludag.org.tr>\n"
 "Language-Team: tr <tr@li.org>\n"
@@ -15,7 +15,139 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: mainwin.py:94
+#: connection.py:33
+msgid "Name:"
+msgstr "İsim:"
+
+#: connection.py:40
+msgid "Device:"
+msgstr "Aygıt:"
+
+#: connection.py:60
+msgid "Scan"
+msgstr "Tara"
+
+#: connection.py:71
+msgid "Authentication"
+msgstr "Kimlik doğrulama"
+
+#: connection.py:75
+msgid "Mode:"
+msgstr "Mod:"
+
+#: connection.py:81
+msgid "No authentication"
+msgstr "Doğrulama yok"
+
+#: connection.py:82
+msgid "Passphrase"
+msgstr "Parola cümlesi"
+
+#: connection.py:83
+msgid "Login"
+msgstr "Giriş"
+
+#: connection.py:84
+msgid "Key"
+msgstr "Anahtar"
+
+#: connection.py:107
+msgid "Scan results:"
+msgstr "Tarama sonuçları:"
+
+#: connection.py:115
+msgid "Scan again"
+msgstr "Yeniden tara"
+
+#: connection.py:117
+msgid "Use"
+msgstr "Kullan"
+
+#: connection.py:148
+msgid "Network settings"
+msgstr "Ağ ayarları"
+
+#: connection.py:154
+msgid "Automatic query (DHCP)"
+msgstr "Otomatik ayar (DHCP)"
+
+#: connection.py:159
+msgid "Manual"
+msgstr "Elle ayarla"
+
+#: connection.py:168
+msgid "Address:"
+msgstr "Adres:"
+
+#: connection.py:173 connection.py:186 connection.py:205
+msgid "Custom"
+msgstr "Özel"
+
+#: connection.py:177
+msgid "Net mask:"
+msgstr "Ağ maskesi:"
+
+#: connection.py:182
+msgid "Gateway:"
+msgstr "Ağ geçidi:"
+
+#: connection.py:193 nameconf.py:42
+msgid "Name servers"
+msgstr "İsim sunucuları"
+
+#: connection.py:203
+msgid "From query"
+msgstr "Sorgudan"
+
+#: connection.py:356
+msgid "Configure network connection"
+msgstr "Ağ bağlantısını ayarla"
+
+#: network-manager.py:33 network-manager.py:85
+msgid "Network Manager"
+msgstr "Ağ Yöneticisi"
+
+#: network-manager.py:80
+msgid "Network manager module is already started!"
+msgstr "Ağ ayarlama arayüzü zaten çalışıyor!"
+
+#: comariface.py:272
+msgid "new connection"
+msgstr "yeni bağlantı"
+
+#: nameconf.py:27 browser.py:317
+msgid "Name Service Settings"
+msgstr "İsim Servisi Ayarları"
+
+#: nameconf.py:35
+msgid "Computer"
+msgstr "Bilgisayar"
+
+#: nameconf.py:39
+msgid "Host name:"
+msgstr "Makina adı:"
+
+#: nameconf.py:88
+msgid "Add Name Server"
+msgstr "İsim Sunucusu Ekle"
+
+#: nameconf.py:88
+msgid "Name server:"
+msgstr "İsim sunucusu:"
+
+#: browser.py:55
+msgid "Turn on/off connection"
+msgstr "Bağlantıyı aç/kapa"
+
+#: browser.py:68
+msgid "Configure connection"
+msgstr "Bağlantıyı ayarla"
+
+#: browser.py:71
+msgid "Delete connection"
+msgstr "Bağlantıyı sil"
+
+#: browser.py:89
 #, python-format
 msgid ""
 "Should I delete the\n"
@@ -25,163 +157,42 @@ msgstr ""
 "'%s'\n"
 "bağlantısını sileyim mi?"
 
-#: mainwin.py:95
+#: browser.py:90
 msgid "Delete connection?"
 msgstr "Bağlantıyı sil?"
 
-#: mainwin.py:130
+#: browser.py:111
 msgid "Automatic"
 msgstr "Otomatik"
 
-#: mainwin.py:310
+#: browser.py:313
 msgid "New connection"
 msgstr "Yeni bağlantı"
 
-#: mainwin.py:315
-msgid "Name Service Settings"
-msgstr "İsim Servisi Ayarları"
-
-#: mainwin.py:343
-msgid "Unconfigured"
-msgstr "Ayarlanmamış"
-
-#: mainwin.py:349
+#: browser.py:347
 msgid "Network Connections Help"
 msgstr "Ağ Bağlantıları Yardımı"
 
-#: links.py:63
-msgid "Connection types"
-msgstr "Bağlantı türleri"
+#: newconn.py:26
+msgid "Create a new connection"
+msgstr "Yeni bir bağlantı oluştur"
 
-#: links.py:69
-msgid "Select a connection type:"
-msgstr "Bir bağlantı tipi seçin:"
+#: newconn.py:31
+msgid "Select device:"
+msgstr "Aygıt seçin:"
 
-#: links.py:77
-msgid "Create connection"
-msgstr "Bağlantıyı oluştur"
+#: newconn.py:57
+msgid "Create"
+msgstr "Oluştur"
 
-#: links.py:85 links.py:116
-msgid "new connection"
-msgstr "yeni bağlantı"
+#: newconn.py:103
+msgid "No suitable device found"
+msgstr "Uygun bir aygıt bulunamadı"
 
-#: links.py:110
+#: newconn.py:111
 msgid "Install network packages!"
 msgstr "Ağ programlarını kurun!"
 
-#: links.py:111
+#: newconn.py:112
 msgid "No package with COMAR network scripts are installed yet."
 msgstr "ÇOMAR ağ betiği sağlayan hiç bir paket kurulu değil."
-
-#: connection.py:31
-msgid "No authentication"
-msgstr "Doğrulama yok"
-
-#: connection.py:36
-msgid "Passphrase:"
-msgstr "Parola cümlesi"
-
-#: connection.py:44
-msgid "Login"
-msgstr "Giriş"
-
-#: connection.py:49 connection.py:239
-msgid "Name:"
-msgstr "İsim:"
-
-#: connection.py:59
-msgid "Password:"
-msgstr "Parola:"
-
-#: connection.py:65
-msgid "Key"
-msgstr "Anahtar"
-
-#: connection.py:111
-msgid "Network:"
-msgstr "Ağ:"
-
-#: connection.py:121
-msgid "Automatic query (DHCP)"
-msgstr "Otomatik ayar (DHCP)"
-
-#: connection.py:125
-msgid "Manual"
-msgstr "Elle ayarla"
-
-#: connection.py:129
-msgid "Address:"
-msgstr "Adres:"
-
-#: connection.py:135
-msgid "Net mask:"
-msgstr "Ağ maskesi:"
-
-#: connection.py:140
-msgid "Gateway:"
-msgstr "Ağ geçidi:"
-
-#: connection.py:204 connection.py:211
-msgid "Device:"
-msgstr "Aygıt:"
-
-#: connection.py:225
-msgid "Scan"
-msgstr "Tara"
-
-#: connection.py:256
-msgid "Configure network connection"
-msgstr "Ağ bağlantısını ayarla"
-
-#: connection.py:268
-msgid "Basic"
-msgstr "Temel"
-
-#: connection.py:272
-msgid "Accept"
-msgstr "Kullan"
-
-#: connection.py:291
-msgid "Phone number"
-msgstr "Telefon"
-
-#: connection.py:300
-msgid "No device"
-msgstr "Aygıt yok"
-
-#: connection.py:398
-msgid "Authentication"
-msgstr "Kimlik doğrulama"
-
-#: network-manager.py:34 network-manager.py:86
-msgid "Network Manager"
-msgstr "Ağ Yöneticisi"
-
-#: network-manager.py:81
-msgid "Network manager module is already started!"
-msgstr "Ağ ayarlama arayüzü zaten çalışıyor!"
-
-#: stack.py:25
-msgid "Network Settings"
-msgstr "Ağ Ayarları"
-
-#: stack.py:33
-msgid "Computer"
-msgstr "Bilgisayar"
-
-#: stack.py:37
-msgid "Host name:"
-msgstr "Makina adı:"
-
-#: stack.py:40
-msgid "Name servers"
-msgstr "İsim sunucuları"
-
-#: stack.py:84
-msgid "Add Name Server"
-msgstr "İsim Sunucusu Ekle"
-
-#: stack.py:84
-msgid "Name server:"
-msgstr "İsim sunucusu:"
-
