--- a/trunk/tasma/tasma/po/nl.po
+++ b/trunk/tasma/tasma/po/nl.po
@@ -17,67 +17,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11\n"
 
-#: aboutview.cpp:68
-msgid "Configuration Center"
-msgstr "Configuratiecentrum"
-
-#: aboutview.cpp:86
-msgid "Welcome to TASMA"
-msgstr "Welkom bij TASMA"
-
-#: aboutview.cpp:88
-msgid ""
-"TASMA is a configuration application for Pardus Operating System. You can "
-"tweak the systems default configuration settings and by using the modules "
-"presented in TASMA. "
-msgstr ""
-"TASMA is een configuratieprogramma van het Pardus-besturingssysteem. U kunt "
-"de standaardinstellingen van het system aanpassen door gebruik te maken "
-"van de modules in TASMA. "
-
-#: aboutview.cpp:99
-msgid ""
-"For a better understanding modules are grouped by categories. You can "
-"activate a category by selecting a category from the left. After activating "
-"a category its contents will be shown as icons in the right panel. You can "
-"start a configuration module by clicking (or double clicking) its icon."
-msgstr ""
-"Voor beter begrip, zijn de modules gegroepeerd in categorieën. U kunt "
-"een categorie activeren door deze links te selecteren. Na activatie "
-"zal de categorie worden weergeven met pictogrammen in het rechter paneel. U kunt "
-"de configuratiemodule starten door op het pictogram te (dubbel)klikken."
-
-#: main.cpp:62
-msgid "TASMA - Pardus Configuration Center"
-msgstr "TASMA - Pardus Configuratiecentrum"
-
-#: main.cpp:63
-msgid "Pardus Configuration Center"
-msgstr "Pardus Configuratiecentrum"
-
-#: main.cpp:64
-msgid "(c) 2005, TUBITAK - UEKAE"
-msgstr "(c) 2006, TÜBİTAK - UEKAE"
-
-#: main.cpp:65
-msgid "Current Maintainer"
-msgstr "Huidige onderhouder"
-
-#: main.cpp:66
-msgid "Old Maintainer & Original Author"
-msgstr "Vorige onderhouder  & oorspronkelijke auteur"
-
-#: main.cpp:67
-msgid "KDE Developers"
-msgstr "KDE-ontwikkelaars"
-
-#: main.cpp:67
-msgid "Module Developers"
-msgstr "Module-ontwikkelaars"
-
-#: tasmamainwin.cpp:80
-msgid "About Current Module"
-msgstr "Over de huidige module"
+#: tmoduleview.cpp:81
+msgid "&Administrator Mode"
+msgstr "&Administratormodus"
 
 #: tmoduleview.cpp:69
 msgid "&Back"
@@ -87,11 +29,68 @@ msgstr "&Terug"
 msgid "&Reset"
 msgstr "He&rstellen"
 
-#: tmoduleview.cpp:81
-msgid "&Administrator Mode"
-msgstr "&Administratormodus"
+#: main.cpp:64
+msgid "(c) 2005, TUBITAK - UEKAE"
+msgstr "(c) 2006, TÜBİTAK - UEKAE"
 
 #: tmoduleview.cpp:143
 msgid "<big>Loading...</big>"
 msgstr "<big>Laden...</big>"
 
+#: tasmamainwin.cpp:80
+msgid "About Current Module"
+msgstr "Over de huidige module"
+
+#: aboutview.cpp:68
+msgid "Configuration Center"
+msgstr "Configuratiecentrum"
+
+#: main.cpp:65
+msgid "Current Maintainer"
+msgstr "Huidige onderhouder"
+
+#: aboutview.cpp:99
+msgid ""
+"For a better understanding modules are grouped by categories. You can "
+"activate a category by selecting a category from the left. After activating "
+"a category its contents will be shown as icons in the right panel. You can "
+"start a configuration module by clicking (or double clicking) its icon."
+msgstr ""
+"Voor beter begrip, zijn de modules gegroepeerd in categorieën. U kunt een "
+"categorie activeren door deze links te selecteren. Na activatie zal de "
+"categorie worden weergeven met pictogrammen in het rechter paneel. U kunt de "
+"configuratiemodule starten door op het pictogram te (dubbel)klikken."
+
+#: main.cpp:67
+msgid "KDE Developers"
+msgstr "KDE-ontwikkelaars"
+
+#: main.cpp:67
+msgid "Module Developers"
+msgstr "Module-ontwikkelaars"
+
+#: main.cpp:66
+msgid "Old Maintainer & Original Author"
+msgstr "Vorige onderhouder  & oorspronkelijke auteur"
+
+#: main.cpp:63
+msgid "Pardus Configuration Center"
+msgstr "Pardus Configuratiecentrum"
+
+#: main.cpp:62
+msgid "TASMA - Pardus Configuration Center"
+msgstr "TASMA - Pardus Configuratiecentrum"
+
+#: aboutview.cpp:88
+msgid ""
+"TASMA is a configuration application for Pardus Operating System. You can "
+"tweak the systems default configuration settings and by using the modules "
+"presented in TASMA. "
+msgstr ""
+"TASMA is een configuratieprogramma van het Pardus-besturingssysteem. U kunt "
+"de standaardinstellingen van het system aanpassen door gebruik te maken van "
+"de modules in TASMA. "
+
+#: aboutview.cpp:86
+msgid "Welcome to TASMA"
+msgstr "Welkom bij TASMA"
