--- a/trunk/tasma/tasma/ChangeLog
+++ b/trunk/tasma/tasma/ChangeLog
@@ -1,3 +1,6 @@
+2006-11-26 İsmail Dönmez <ismail@pardus.org.tr>
+    * Ported to CMake
+
 2005-01-27 Barış Metin <baris@uludag.org.tr>
 	* Added comarrpc and a (non-working) test module.
 	* Released version 0.1
