--- a/trunk/tasma/tasma/AUTHORS
+++ b/trunk/tasma/tasma/AUTHORS
@@ -5,7 +5,7 @@ Current Maintainer:
 Old Maintainer:
 Barış Metin <baris [at] pardus.org.tr>
 
-Kdetv Maintainer: 
+TV Module Maintainer: 
 Faik Uygur <faik [at] pardus.org.tr>
 
 Module Developers:
