--- a/trunk/pardon/README
+++ b/trunk/pardon/README
@@ -1,7 +1,9 @@
 Pardon is a web based interface for handling
 the hardware compatibility of Pardus. It's
 basically used to enter, modify and check
-hardware compatibility of Pardus. 
+hardware compatibility of Pardus.
 
-Pardon runs at http://pardon.pardus.org.tr
+Pardon runs at http://donanim.pardus.org.tr
+
+Donanim means Hardware in Turkish ;)
 
