--- a/trunk/tasma/disk-manager/README
+++ b/trunk/tasma/disk-manager/README
@@ -1,5 +1,5 @@
-Fstab manager
+Disk manager
 ---------------
 
-Fstab Manager is an application for editing 
+Disk Manager is an application for editing 
 the fstab file in a pretty way.
