--- a/tasma/disk-manager/po/es.po
+++ b/tasma/disk-manager/po/es.po
@@ -1,24 +1,24 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of es.po to
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Gökmen GÖKSEL <gokmen@pardus.org.tr>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: service manager\n"
+"Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-11-30 21:47+0200\n"
-"PO-Revision-Date: 2006-11-26 18:39-0400\n"
-"Last-Translator: Klemens Häckel <click3d(.a)linuxmail.org>\n"
-"Language-Team: spanish <es@li.org>\n"
+"POT-Creation-Date: 2006-11-30 22:02+0200\n"
+"PO-Revision-Date: 2006-11-30 21:59+0200\n"
+"Last-Translator: Gökmen GÖKSEL <gokmen@pardus.org.tr>\n"
+"Language-Team:  <tr@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: src/disk-manager.py:78 src/disk-manager.py:315 src/diskform.py:132
-#, fuzzy
 msgid "Disk Manager"
-msgstr "Service Manager"
+msgstr ""
 
 #: src/disk-manager.py:200 src/disk-manager.py:219
 msgid "Completed"
@@ -29,19 +29,16 @@ msgid "File /etc/fstab updated !"
 msgstr ""
 
 #: src/disk-manager.py:250
-msgid ""
-"\n"
-"Mount Point : "
+msgid "Mount Point : "
 msgstr ""
 
 #: src/disk-manager.py:251
-msgid "\tFileSystem Type : "
+msgid "File System Type : "
 msgstr ""
 
 #: src/disk-manager.py:310
-#, fuzzy
 msgid "Disk Manager is already running!"
-msgstr "Administrador de Servicios ya se está ejecutando !"
+msgstr ""
 
 #: src/diskform.py:92 src/diskform.py:139
 msgid "Disks"
@@ -78,77 +75,3 @@ msgstr ""
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
 msgstr ""
-
-#: src/diskform.py:143
-msgid "Update"
-msgstr ""
-
-#~ msgid "You are not allowed to do this operation."
-#~ msgstr "No estás autorizado para esta operación."
-
-#~ msgid "Access Denied"
-#~ msgstr "Acceso Denegado"
-
-#~ msgid "COMAR script execution failed."
-#~ msgstr "Ejecución de script COMAR falló."
-
-#~ msgid "Script Error"
-#~ msgstr "Error de Script"
-
-#~ msgid "Unable to start service."
-#~ msgstr "No posible arrancar el servicio."
-
-#~ msgid "Failed"
-#~ msgstr "Falló"
-
-#~ msgid "Unable to stop service."
-#~ msgstr "No posible parar el servicio."
-
-#~ msgid "Select a service from list."
-#~ msgstr "Seleccione un servicio de la lista."
-
-#~ msgid "Start"
-#~ msgstr "Iniciar"
-
-#~ msgid "%s is running."
-#~ msgstr "%s está ejecutandose."
-
-#~ msgid "%s is not running."
-#~ msgstr "%s no se está ejecutando."
-
-#~ msgid "Execute startup script"
-#~ msgstr "Ejecitar script de arranque"
-
-#~ msgid "Execuete shutdown script"
-#~ msgstr "Ejecutar script de apagado"
-
-#~ msgid ""
-#~ "If you stop this service, you may have problems.\n"
-#~ "Are you sure you want to stop this service?"
-#~ msgstr ""
-#~ "Si paras este servicio podrías tener problemas.\n"
-#~ "Estás seguro que quieres parar este servicio ?"
-
-#~ msgid "1"
-#~ msgstr "1"
-
-#~ msgid "Service"
-#~ msgstr "Servicio"
-
-#~ msgid "Run on Startup"
-#~ msgstr "Iniciar con el arranque del sistema"
-
-#~ msgid "Package"
-#~ msgstr "Paquete"
-
-#~ msgid "Run on startup."
-#~ msgstr "Iniciar con el arranque del sistema"
-
-#~ msgid "Don't run on startup."
-#~ msgstr "No iniciar con el arranque del sistema"
-
-#~ msgid "&List servers only."
-#~ msgstr "&Listar solamente servidores."
-
-#~ msgid "Alt+L"
-#~ msgstr "Alt+L"
